--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
-.unemployment_rate_map{
+.unemployment_rate_map {
     justify-content: left;
     position: relative;
     display: flex;
+}
+
+.unemployment_rate_map h2 {
+    position: absolute;
+    justify-content: left;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin-top:-5px;
+}
+
+#map_chart {
+    margin-top: 40px;
 }
 
 .group_comparison{
@@ -19,7 +32,7 @@
     background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background for visibility */
     padding: 5px;
     border-radius: 3px;
-    font-size: 12px;
+    font-size: 13px;
     border: 1px solid black; /* Optional: border to highlight the annotation */
     font-family: Arial, Helvetica, sans-serif;
   }
